--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/vite": "^4.1.4",
     "primeicons": "^7.0.0",
     "tailwindcss": "^4.1.4",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
